Index: Split CSA into two parts, the second links to ahmed's csa notes.

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         <td><p class="left" align="center" style="font-weight: bold"></p></td>
         <td>
             <div class="parentBar">
-                <div class="childBar" value="14" max="31"></div>
+                <div class="childBar" value="23" max="31"></div>
             </div>
         </td>
     </tr>
@@ -292,8 +292,6 @@
         <td class="date">12/05/2017</td>
         <td class="time" align="center">09:30</td>
         <td>
-            <a href="professionalcomputing.html"> LI Professional Computing </a>
-            <br>
             <a href="ProfComp-CourseNotes.pdf"> LI Professional Computing (PDF) </a>
         </td>
         <td> Great Hall</td>
@@ -315,7 +313,10 @@
         <td> Monday</td>
         <td class="date">15/05/2017</td>
         <td class="time" align="center">09:30</td>
-        <td><a href="CSA-CourseNotes.pdf"> LI Computer Systems and Architecture (PDF) </a></td>
+        <td> LI Computer Systems and Architecture <br>
+            <a href="CSA-CourseNotes.pdf">Part 1 (PDF)</a> <br>
+            <a href="https://github.com/Rinaldyr/ExamNotes2017/blob/master/MoreCSANotes.md">Part 2 (.md)</a>
+        </td>
         <td> Sports Hall</td>
         <td class="rr" style="display: none" align="center"> 332</td>
         <td class="sr" style="display: none" align="center"> 216</td>
