--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 <h1 align="center"> Exam Notes May/June 2017 </h1>
 <p align="center" id="name"> Welcome! </p>
 <hr/>
-<br/>
+<h3 align="center" style="color: red"> PLEASE DOUBLE CHECK <a href="https://my.bham.ac.uk">my.bham</a> FOR YOUR EXAM ROOM AS SOME PEOPLE HAVE DIFFERENT ROOM FOR DIFFERENT MODULES. </h3>
 <table align="center">
     <caption id="caption"><keyword>Exam Schedule</keyword></caption>
     <tr class="module" style="font-weight: bold;">
@@ -433,7 +433,7 @@
         </td>
     </tr>
 </table>
-
+<br>
 <script> // Back end
     var now = new Date().getTime();
     var examDates = document.getElementsByClassName('date');
