--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
         <td class="kk" style="display: none" align="center"> 22</td>
         <td class="rb" style="display: none" align="center"> 11</td>
         <td class="ab" style="display: none" align="center"> N/A</td>
-        <td class="hh" style="display: none" align="center"> 18</td>
+        <td class="hh" style="display: none" align="center"> 18*</td>
         <td align="center"> 1:30hrs</td>
         <td><p class="left" align="center" style="font-weight: bold"></p></td>
         <td>
@@ -363,7 +363,7 @@
         <td class="kk" style="display: none" align="center"> 32</td>
         <td class="rb" style="display: none" align="center"> 12</td>
         <td class="ab" style="display: none" align="center"> N/A</td>
-        <td class="hh" style="display: none" align="center"> 20</td>
+        <td class="hh" style="display: none" align="center"> 20*</td>
         <td align="center"> 1:30hrs</td>
         <td><p class="left" align="center" style="font-weight: bold"></p></td>
         <td>
@@ -376,7 +376,7 @@
         <td> Wednesday</td>
         <td class="date">24/05/2017</td>
         <td class="time" align="center">09:30</td>
-        <td><a href="https://haruco3.github.io/lecture-notes/Maths.pdf"> LI Math Techniques for Comp Sc (PDF) </a></td>
+        <td><a href="Maths-CourseNotes.pdf"> LI Math Techniques for Comp Sc (PDF) </a></td>
         <td> New Gym</td>
         <td class="rr" style="display: none" align="center"> 197</td>
         <td class="sr" style="display: none" align="center"> 92</td>
